fix: text align left nelle cards

--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ p {
   flex-direction: column;
   justify-content: space-evenly;
   padding: 0 20px;
+  text-align: left;
 }
 
 .row {
